# message-log-viewer

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
message_log_viewer/: log_data.py  log_fetcher.py  main.py  message_log_viewer.py  presets.json  table_models.py
